# api-gateway-rust

./: Cargo.toml  README.md  docker-compose.yml
app/: Cargo.toml
app/src/: main.rs
app/src/modules/: admin.rs  auth.rs  gateway.rs  mod.rs
crates/admin_core/: Cargo.toml
crates/admin_core/src/: config.rs  contract_impl.rs  db.rs  handlers.rs  internal_handlers.rs  lib.rs  models.rs  server.rs  service.rs  user_service.rs
crates/auth_core/: Cargo.toml
crates/auth_core/src/: config.rs  db.rs  handlers.rs  http_client.rs  lib.rs  models.rs  server.rs  service.rs  token.rs
crates/common/src/: lib.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs  token.rs  types.rs  user.rs
crates/gateway_core/: Cargo.toml
crates/gateway_core/src/: config.rs  lib.rs  middleware.rs  proxy.rs  rate_limit.rs  server.rs  types.rs  wasm.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
docs/architecture/: contracts.md  structure.md
docs/services/: admin.md  auth.md  gateway.md
docs/specs/: README.md
front/: index.html  package-lock.json  package.json  vite.config.ts
front/src/: App.tsx  main.tsx  users.tsx  vite-env.d.ts
front/src/auth/: AuthContext.tsx  LoginPage.tsx  index.ts
scripts/: run-app.ps1  run-app.sh  run-services.ps1  run-services.sh
services/admin/: Cargo.toml
services/admin/src/: main.rs
services/auth/: Cargo.toml
services/auth/src/: main.rs
services/gateway/: Cargo.toml
services/gateway/src/: main.rs
