[package]
name = "admin_core"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
