[package]
name = "auth_core"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
contracts = { path = "../contracts" }
anyhow = { workspace = true }
async-trait = "0.1"
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tower-http = { workspace = true }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
