[package]
name = "gateway_core"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
http-body-util = "0.1"
jsonwebtoken = "9"
serde = { workspace = true }
